--- a/config/themes.yml
+++ b/config/themes.yml
@@ -2,6 +2,9 @@ default: styles/application.scss
 contrast: styles/contrast.scss
 mastodon-light: styles/mastodon-light.scss
 
+twvariant-wide: styles/twvariant-wide.scss
+twvariant-wide-extra: styles/twvariant-wide-extra.scss
+
 goyang:  styles/goyang.scss
 myeongjo:  styles/myeongjo.scss
 myeongjo_kronly:  styles/myeongjo_kronly.scss
