feature(themes): add ronilaukkarinen/mastodon-bird-ui

--- a/config/themes.yml
+++ b/config/themes.yml
@@ -2,6 +2,9 @@ default: styles/application.scss
 contrast: styles/contrast.scss
 mastodon-light: styles/mastodon-light.scss
 
+bird-ui: styles/bird-ui.scss
+bird-ui-light: styles/bird-ui-light.scss
+
 twvariant-wide: styles/twvariant-wide.scss
 twvariant-wide-extra: styles/twvariant-wide-extra.scss
 
